--- a/src/template/index.html
+++ b/src/template/index.html
@@ -49,7 +49,7 @@
         resize()
     }
     resize();
-    stencil.load([startNode, flowNode, judgeNode, msg_node, linkNode ])
+    stencil.load([startNode, flowNode, judgeNode, msg_node,ccNode, linkNode ])
     graph.fromJSON({$x6|raw});
 </script>
 </body>
