--- a/src/template/att.html
+++ b/src/template/att.html
@@ -10,7 +10,7 @@
 <div class="wrap">
     <div class="content">
         <form action="{$urls['designapi']}?act=saveatt" method="post" name="form" id="form" style="width: 100%;padding: 10px;">
-            <div id="box" style='height: auto;width: auto;'>
+            <div id="box" style='height: 98%;width: auto;'>
                     <input type="hidden" name="flow_id" value="{$one['flow_id']}"/>
                     <input type="hidden" name="process_id" value="{$one['id']}"/>
                     <input type="hidden" name="process_condition" id="process_condition" value='{$one.process_tos}'>
