--- a/assets/work/workflow.5.0.css
+++ b/assets/work/workflow.5.0.css
@@ -196,20 +196,21 @@ ul li {
 
 .ms2side__div {
     clear: left;
-    width: auto;
     padding: 14px 1px 1px;
     float: left;
+    width: 100%;
+
 }
 
 .ms2side__select {
     float: left;
+    width: 45%;
 }
 
 .ms2side__header {
     margin-left: 3px;
     margin-top: -20px;
     margin-bottom: 5px;
-    width: 110px;
     height: 20px;
 }
 
@@ -218,15 +219,12 @@ ul li {
     font-size: 10pt;
     margin: 8px 0 0;
     padding: 0 8px;
-    width: 40px;
+    width: 10%;
     color: black;
     text-align: center;
     overflow: hidden;
 }
 
-.ms2side__updown {
-    font-size: 9pt;
-}
 
 .ms2side__options p, .ms2side__updown p {
     margin: 2px 0;
@@ -249,58 +247,10 @@ ul li {
 }
 
 .ms2side__div select {
-    width: 110px;
+    width: 100%;
     float: left;
+    height: 100%;
 }
-
-
-/* INPUT FOR SEARCH */
-.ms2side__header input {
-    width: 80px;
-    height: 12px;
-}
-
-.ms2side__header input.wait {
-    width: 80px;
-    height: 12px;
-}
-
-.ms2side__header input.small {
-    width: 50px;
-    height: 12px;
-}
-
-
-/* INPUT FOR SELECT SEARCH */
-.ms2side__header select {
-    width: 100px;
-    font-size: 11px;
-    height: 18px;
-    float: none;
-}
-
-.ms2side__header select.small {
-    width: 70px;
-}
-
-/* REMOVE FILTER OPTION FOR SEARCH */
-.ms2side__header a {
-    font-size: 10pt;
-    padding: 0 8px;
-    width: 16px;
-    height: 16px;
-    color: black;
-    text-align: center;
-    text-decoration: none;
-    border: 1px solid gray;
-    margin: 0 0 0 3px;
-}
-
-.ms2side__header a:hover {
-    background-color: #F0F0FF;
-    border-color: gray;
-}
-
 
 .sfdp-field-con-view {
     min-height: 35px;
