--- a/src/template/att.html
+++ b/src/template/att.html
@@ -142,7 +142,7 @@
                     </table>
             <table class="table">
                 <tr>
-                    <td>
+                    <td  style="text-align:center">
                         <button class="button" type="submit">保存</button>
                     </td>
                 </tr>
