增加自由步骤模式

--- a/src/template/att.html
+++ b/src/template/att.html
@@ -60,7 +60,7 @@
                                 </select>
                             </td>
                         </tr>
-                        <tr id='wf_mode_2' {$wf_mode|raw} {if condition="($one.process_type == 'node-cc')or($one.process_type == 'node-msg')"}>
+                        <tr id='wf_mode_2' {$wf_mode|raw}>
                             <td colspan=4>
                                 <table class="table">
                                     <thead>
