增加事务角色审批权； ALTER TABLE `t_wf_run_process` ADD COLUMN `word_type` int NULL DEFAULT 1 COMMENT '类型 1为人员；2为角色' AFTER `sponsor_ids`;

--- a/src/template/att.html
+++ b/src/template/att.html
@@ -113,9 +113,10 @@
                                         <input  type="hidden" name="auto_role_text" id="auto_role_text" value="{$one['auto_role_text']}">
                                     </div>
                                     <div class="hide auto_person" id="auto_person_6">
-                                        取业务表<select class="smalls" name='work_text'><option value="">选择字段</option>{$from_html|raw}</select>的
+                                        取业务表<select class="smalls" name='work_text'><option value="">选择字段</option>{$from_html|raw}</select>
                                             <select class="smalls" name="work_ids">
-                                                <option value="1">制单人员</option>
+                                                <option value="1">人员</option>
+                                                <option value="2">角色</option>
                                             </select>
                                     </div>
 
