--- a/src/template/index.html
+++ b/src/template/index.html
@@ -47,12 +47,12 @@
     const Tpflow_Id = {$id};
     const Tpflow_Server_Url = '{$surl}';
 </script>
-<script src="/static/work/jquery-1.7.2.min.js"></script>
-<script src="/static/work/lib/layer/2.4/layer.js"></script>
-<script src="/static/work/tpflow.x6.js"></script>
-<script src="/static/work/app.js"></script>
-<script src="/static/work/tpflow.node.js"></script>
-<script src="/static/work/tpflow.api.js"></script>
+<script src="{$static_url}jquery-1.7.2.min.js"></script>
+<script src="{$static_url}lib/layer/2.4/layer.js"></script>
+<script src="{$static_url}tpflow.x6.js"></script>
+<script src="{$static_url}app.js"></script>
+<script src="{$static_url}tpflow.node.js"></script>
+<script src="{$static_url}tpflow.api.js"></script>
 <script>
     function resize(){
         const width=document.body.offsetWidth - 120;
